--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "web-app",
+  "homepage": "https://suvankargiri7.github.io/contruction-web-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.34"
+    "@types/react-redux": "^7.1.34",
+    "gh-pages": "^6.2.0"
   }
 }
